<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.services.edit.LodgeEdit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="?android:actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo_editar_alojamiento"
                style="@style/text_view"
                android:layout_marginStart="@dimen/dim20"
                android:layout_marginTop="@dimen/dim20"
                android:text="@string/editar_alojamiento"
            />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/nombre_alojamiento"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/texto_nombre_formulario"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/telefono_alojamiento"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/telefono"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/direccion_alojamiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/direccion"
                    android:focusable="false"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/solicitudes_alojamiento"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/limite_solicitudes"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/fecha_limite_alojamiento"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/fecha_limite"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/descripcion_alojamiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/dim20"
                    android:layout_marginRight="@dimen/dim20"
                    android:layout_marginTop="@dimen/dim10"
                    android:hint="@string/descripcion"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enviar_editar_alojamiento"
                android:layout_marginTop="@dimen/dim20"
                android:layout_marginBottom="@dimen/dim20"
                android:text="@string/enviar"
            />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>