...
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="horizontal"
    >

        <ImageButton
            android:id="@+id/boton_tipo_alojamiento"
            android:layout_width="@dimen/dim70"
            android:layout_height="@dimen/dim70"
            android:adjustViewBounds="true"
            android:contentDescription="@string/texto_nombre_formulario"
            android:scaleType="fitCenter"
            android:src="@drawable/lodging"/>
...
